--- a/additional_visual.html
+++ b/additional_visual.html
@@ -59,7 +59,8 @@
 </head>
 
 <body>
-    <h1>Step 0 vs Step 800 Video Comparison</h1>
+    <h1>Finetuning Step 0 vs Step 800 Video Comparison</h1>
+    <hr class="divider">
     <h1>action: "warm up"</h1>
     <hr class="divider">
 
@@ -71,7 +72,7 @@
                 <source src="videos_additional/step0-sample0-0.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 0): -0.501</b></p>
+                <p><b>Critic Score (Step 0): -1.341</b></p>
             </div>
         </div>
         <div class="video-item">
@@ -79,7 +80,7 @@
                 <source src="videos_additional/step800-sample0-0.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 800): 4.672</b></p>
+                <p><b>Critic Score (Step 800): 2.345</b></p>
             </div>
         </div>
 
@@ -89,7 +90,7 @@
                 <source src="videos_additional/step0-sample0-1.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 0): 1.100</b></p>
+                <p><b>Critic Score (Step 0): -0.975</b></p>
             </div>
         </div>
         <div class="video-item">
@@ -97,7 +98,7 @@
                 <source src="videos_additional/step800-sample0-1.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 800): 13.469</b></p>
+                <p><b>Critic Score (Step 800): 4.936</b></p>
             </div>
         </div>
 
@@ -107,7 +108,7 @@
                 <source src="videos_additional/step0-sample0-2.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 0): -1.357</b></p>
+                <p><b>Critic Score (Step 0): -2.252</b></p>
             </div>
         </div>
         <div class="video-item">
@@ -115,7 +116,7 @@
                 <source src="videos_additional/step800-sample0-2.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 800): 2.145</b></p>
+                <p><b>Critic Score (Step 800): 3.147</b></p>
             </div>
         </div>
 
@@ -125,7 +126,7 @@
                 <source src="videos_additional/step0-sample0-3.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 0): -3.513</b></p>
+                <p><b>Critic Score (Step 0): -0.953</b></p>
             </div>
         </div>
         <div class="video-item">
@@ -133,7 +134,7 @@
                 <source src="videos_additional/step800-sample0-3.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 800): 1.256</b></p>
+                <p><b>Critic Score (Step 800): 0.726</b></p>
             </div>
         </div>
 
@@ -143,7 +144,7 @@
                 <source src="videos_additional/step0-sample0-4.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 0): 1.550</b></p>
+                <p><b>Critic Score (Step 0): 0.572</b></p>
             </div>
         </div>
         <div class="video-item">
@@ -151,7 +152,7 @@
                 <source src="videos_additional/step800-sample0-4.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 800): 3.976</b></p>
+                <p><b>Critic Score (Step 800): 1.956</b></p>
             </div>
         </div>
 
@@ -162,7 +163,7 @@
                 <source src="videos_additional/step0-sample0-5.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 0): 0.188</b></p>
+                <p><b>Critic Score (Step 0): 1.638</b></p>
             </div>
         </div>
         <div class="video-item">
@@ -170,7 +171,7 @@
                 <source src="videos_additional/step800-sample0-5.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 800): 1.245</b></p>
+                <p><b>Critic Score (Step 800): 2.642</b></p>
             </div>
         </div>
 
@@ -180,7 +181,7 @@
                 <source src="videos_additional/step0-sample0-6.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 0): 1.140</b></p>
+                <p><b>Critic Score (Step 0): -2.966</b></p>
             </div>
         </div>
         <div class="video-item">
@@ -188,7 +189,7 @@
                 <source src="videos_additional/step800-sample0-6.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 800): 7.233</b></p>
+                <p><b>Critic Score (Step 800): 7.367</b></p>
             </div>
         </div>
 
@@ -198,7 +199,7 @@
                 <source src="videos_additional/step0-sample0-7.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 0): -2.672</b></p>
+                <p><b>Critic Score (Step 0): -7.445</b></p>
             </div>
         </div>
         <div class="video-item">
@@ -206,7 +207,7 @@
                 <source src="videos_additional/step800-sample0-7.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 800): 4.256</b></p>
+                <p><b>Critic Score (Step 800): 2.854</b></p>
             </div>
         </div>
         
@@ -216,7 +217,7 @@
                 <source src="videos_additional/step0-sample0-8.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 0): 2.643</b></p>
+                <p><b>Critic Score (Step 0): 1.334</b></p>
             </div>
         </div>
         <div class="video-item">
@@ -224,7 +225,7 @@
                 <source src="videos_additional/step800-sample0-8.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 800): 5.567</b></p>
+                <p><b>Critic Score (Step 800): 2.692</b></p>
             </div>
         </div>
 
@@ -234,12 +235,203 @@
                 <source src="videos_additional/step0-sample0-9.mp4" type="video/mp4">
             </video>
             <div class="caption">
-                <p><b>Critic Score (Step 0): -3.230</b></p>
+                <p><b>Critic Score (Step 0): -0.165</b></p>
             </div>
         </div>
         <div class="video-item">
             <video autoplay loop controls muted>
                 <source src="videos_additional/step800-sample0-9.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 800): 2.643</b></p>
+            </div>
+        </div>
+    </div>
+
+    <hr class="divider">
+
+
+    <hr class="divider">
+    <h1>action: "run"</h1>
+    <hr class="divider">
+
+    <!-- Video Comparison -->
+    <div class="video-container">
+        <!-- Group 1 -->
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step0-sample2-0.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 0): -0.501</b></p>
+            </div>
+        </div>
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step800-sample2-0.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 800): 4.672</b></p>
+            </div>
+        </div>
+
+        <!-- Group 2 -->
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step0-sample2-1.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 0): 1.100</b></p>
+            </div>
+        </div>
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step800-sample2-1.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 800): 13.469</b></p>
+            </div>
+        </div>
+
+        <!-- Group 3 -->
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step0-sample2-2.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 0): -1.357</b></p>
+            </div>
+        </div>
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step800-sample2-2.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 800): 2.145</b></p>
+            </div>
+        </div>
+
+        <!-- Group 4 -->
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step0-sample2-3.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 0): -3.513</b></p>
+            </div>
+        </div>
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step800-sample2-3.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 800): 1.256</b></p>
+            </div>
+        </div>
+
+        <!-- Group 5 -->
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step0-sample2-4.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 0): 1.550</b></p>
+            </div>
+        </div>
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step800-sample2-4.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 800): 3.976</b></p>
+            </div>
+        </div>
+
+
+        <!-- Group 6 -->
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step0-sample2-5.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 0): 0.188</b></p>
+            </div>
+        </div>
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step800-sample2-5.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 800): 1.245</b></p>
+            </div>
+        </div>
+
+        <!-- Group 6 -->
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step0-sample2-6.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 0): 1.140</b></p>
+            </div>
+        </div>
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step800-sample2-6.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 800): 7.233</b></p>
+            </div>
+        </div>
+
+        <!-- Group 5 -->
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step0-sample2-7.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 0): -2.672</b></p>
+            </div>
+        </div>
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step800-sample2-7.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 800): 4.256</b></p>
+            </div>
+        </div>
+        
+        <!-- Group 5 -->
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step0-sample2-8.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 0): 2.643</b></p>
+            </div>
+        </div>
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step800-sample2-8.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 800): 5.567</b></p>
+            </div>
+        </div>
+
+        <!-- Group 5 -->
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step0-sample2-9.mp4" type="video/mp4">
+            </video>
+            <div class="caption">
+                <p><b>Critic Score (Step 0): -3.230</b></p>
+            </div>
+        </div>
+        <div class="video-item">
+            <video autoplay loop controls muted>
+                <source src="videos_additional/step800-sample2-9.mp4" type="video/mp4">
             </video>
             <div class="caption">
                 <p><b>Critic Score (Step 800): 7.453</b></p>
